# Real_time_Voice_Phishing_Detection

./: .gitignore  20260427_Ai_Analyzer_Status.md  CLAUDE.md  ISSUES.md  PROJECT.md  README.md  main.py  pyproject.toml
NLU/: Dockerfile  analyzer.py  colab_tflite_convert.ipynb  config.py  docker-compose.yml  model_report_v5.md  pyproject.toml  requirements.txt
NLU/data/: train_phishing_augmented_data.json
NLU/data/raw/: callcenter_finance.json  callcenter_finance_train.json  callcenter_finance_val.json  phishing_augmented_data.json  test_callcenter_finance.json  test_normal_callcenter.json
NLU/data/v1/: val_ml.json
NLU/data/v2/: test_ml.json  test_ml_backup.json  val_ml.json  val_ml_backup.json
NLU/data/v3/: augmented.json  train_ml.json  train_ml_backup.json
NLU/data/v4/: normal_callcenter.json  normal_tts.json  test_callcenter_finance.json  test_normal_callcenter.json  test_normal_tts.json  train_normal_callcenter.json  train_normal_tts.json  val_callcenter_finance.json  val_normal_callcenter.json  val_normal_tts.json
NLU/data/v5/: phishing_augmented_data.json  test_phishing_augmented_data.json  (+2 more)
NLU/docs/: TODO.md  augment_v3.md  model_report_v4.md
NLU/model_build/: add_normal_samples.py  augment.py  augment_v3.py  augment_v5.py  compare.py  convert.py  convert_int8_docker.py  evaluate.py  extract_callcenter.py  extract_callcenter_finance.py  train.py  train_colab.py
NLU/pipeline/: __init__.py  classifier.py  filter.py
NLU/test_scripts/: make_test_dataset.py  run_classify.py  run_mixed_test.py  run_stt.py  stt.py  test_tflite.py
STT/: stt.py  (+2 more)
(+106 files in other folders)
