[project]
name = "real-time-voice-phishing-detection"
version = "0.1.0"
description = "실시간 보이스피싱 탐지 AI 파이프라인"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "transformers",
    "torch",
    "numpy>=2.0",
    "soundfile>=0.12.0",
    "imageio-ffmpeg>=0.4.9",
    "scikit-learn",
    "accelerate>=1.1.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "onnxscript>=0.7.0",
    "optimum[exporters]>=2.1.0",
    "openai>=2.32.0",
]
